adding mapService to get lon/lat e generate map_link for collection point, either implement relation n:n for collection place a recycle types in the pivot table `collection_point_recycle_types`
