# src/routes/collectionPoints.routes.js
@@ -1,32 +1,28 @@
 const { Router } = require('express');
-const CollectionPoint = require('../controllers/CollectionPointController');
+const CollectionPointController = require('../controllers/CollectionPointController');
+const validateToken = require('../middlewares/validateToken');
 
-const usersRoutes = new Router();
+const collectionPointsRoutes = new Router();
 
-usersRoutes.post('/criar', CollectionPoint.createCollectionPoint
-    /*
-        #swagger.tags = ['Pontos de Coleta']
-        #swagger.description = 'Endpoint para criar ponto de coleta'
-        #swagger.parameters['criarPontoDeColeta'] = {
-            in: 'body',
-            description: 'Dados do ponto de coleta',
-            required: true,
-            schema: {
-                $name: "Nelson Marcos Vinicius Oliveira",
-                $cpf: "862.885.759-17",
-                $gender: "M",
-                $email: "nelsonmarcosoliveira@kimmay.com.br",
-                $password: "Teste123!",
-                $birthdate: "1975-08-02",
-                $postalcode: "88067-108",
-                $street: "Servidão Manoel Barbosa",
-                $neighborhood: "Pântano do Sul",
-                $city: "Florianópolis",
-                $state: "SC",
-                $number: "634"
-            }
+collectionPointsRoutes.post('/criar', validateToken, CollectionPointController.createCollectionPoint /*
+    #swagger.tags = ['Pontos de Coleta'],
+    #swagger.description = 'Endpoint para criar um ponto de coleta',
+    #swagger.parameters['criarPontoDeColeta'] = {
+        in: 'body',
+        description: 'Dados do ponto de coleta. Importante para teste recycle_type deve ser um array com valores de 1 a 20',
+        required: true,
+        schema: {
+            $name: "Ponto Dakir Polidoro",
+            $description: "Este é um ponto de coleta da comcap para recolhimento de vidros",
+            $postalcode: "88063-565",
+            $street: "Rua Radialista Dakir Polidoro",
+            $neighborhood: "Campeche",
+            $city: "Florianópolis",
+            $state: "SC",
+            $number: "123",
+            recycle_types: [1, 2, 3]
         }
-    */
-);
+    }
+*/);
 
-module.exports = usersRoutes;
+module.exports = collectionPointsRoutes;
